--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^4.2.3",
-        "autoprefixer": "^10.4.14",
-        "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.5",
-        "postcss": "^8.4.23",
-        "tailwindcss": "^3.3.2",
-        "vite": "^4.0.0",
-        "vue": "^3.0.0"
+        "autoprefixer": "^10.4",
+        "axios": "^1.7",
+        "concurrently": "^9.1",
+        "laravel-vite-plugin": "^1.0",
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4",
+        "vite": "^5.0",
+        "@vitejs/plugin-vue": "^5.2",
+        "vue": "^3.5"
     },
     "dependencies": {
-        "@heroicons/vue": "^2.0.18",
-        "@inertiajs/vue3": "^1.0.6",
-        "@tailwindcss/aspect-ratio": "^0.4.2",
-        "@tailwindcss/forms": "^0.5.3",
-        "date-fns": "^2.30.0"
+        "@heroicons/vue": "^2.2",
+        "@inertiajs/vue3": "^1.2",
+        "@tailwindcss/aspect-ratio": "^0.4",
+        "@tailwindcss/forms": "^0.5",
+        "date-fns": "^4.1"
     }
 }
